--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,3 +24,11 @@ jobs:
           # ... other options
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          
+      - uses: lowlighter/metrics@latest
+        with:
+          plugin_habits: yes
+          plugin_habits_from: 200
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
